--- a/memoria/bibliografia/glosario.tex
+++ b/memoria/bibliografia/glosario.tex
@@ -19,3 +19,31 @@
 	name=Pinhole camera model,
 	description={Descripcion de la relación matemática entre las coordenadas de un punto en el espacio de tres dimensiones y su proyección en el plano de imagen de una supuesta cámara estenopeica ideal}
 }
+\newglossaryentry{worldmatrix}{
+	name=World matrix,
+	description={Matriz de transformación 4×4 que define la posición, rotación y escala de un objeto en el espacio de coordenadas mundial (global) del sistema de renderizado 3D}
+}
+\newglossaryentry{viewmatrix}{
+	name=View matrix,
+	description={Matriz de transformación 4×4 que convierte coordenadas del espacio mundial al espacio de vista de la cámara}
+}
+\newglossaryentry{modelmatrix}{
+	name=Model matrix,
+	description={Matriz de transformación 4×4 que define las transformaciones locales de un objeto 3D (posición, rotación, escala) en su propio sistema de coordenadas}
+}
+\newglossaryentry{rowmajor}{
+	name=Row-major,
+	description={Orden de almacenamiento de matrices en memoria donde los elementos se almacenan secuencialmente fila por fila}
+}
+\newglossaryentry{columnmajor}{
+	name=Column-major,
+	description={Orden de almacenamiento de matrices en memoria donde los elementos se almacenan secuencialmente columna por columna}
+}
+\newglossaryentry{pose}{
+	name=Pose,
+	description={Combinación de posición y orientación de un objeto en el espacio 3D, típicamente representada mediante vectores de traslación y rotación}
+}
+\newglossaryentry{tracking}{
+	name=Tracking,
+	description={Proceso de seguimiento en tiempo real de la posición y orientación de objetos o marcadores en aplicaciones de visión por computador}
+}
