--- a/memoria/bibliografia/acronimos.tex
+++ b/memoria/bibliografia/acronimos.tex
@@ -20,6 +20,7 @@
 \newacronym{api}{API}{Interfaz de programación de aplicaciones}
 \newacronym{cad}{CAD}{Computer-Aided Design}
 \newacronym{opencv}{OpenCV}{Open Source Computer Vision Library}
+\newacronym{osg}{OSG}{OpenSceneGraph}
 \newacronym{sdk}{SDK}{Software Development Kit}
 \newacronym{fbp}{FBP}{Retroproyección Filtrada}
 \newacronym{cgls}{CGLS}{Mínimos Cuadrados Conjugados}
