--- a/memoria/bibliografia/glosario.tex
+++ b/memoria/bibliografia/glosario.tex
@@ -47,3 +47,7 @@
 	name=Tracking,
 	description={Proceso de seguimiento en tiempo real de la posición y orientación de objetos o marcadores en aplicaciones de visión por computador}
 }
+\newglossaryentry{phong}{
+	name=Modelo de iluminación Phong,
+	description={Modelo empírico desarrollado por Bui Tuong Phong que calcula la iluminación de una superficie combinando tres componentes: luz ambiente, luz difusa y luz especular. Es ampliamente utilizado en gráficos por computador por su simplicidad y resultados visualmente aceptables}
+}
