--- a/memoria/bibliografia/acronimos.tex
+++ b/memoria/bibliografia/acronimos.tex
@@ -21,6 +21,10 @@
 \newacronym{cad}{CAD}{Computer-Aided Design}
 \newacronym{opencv}{OpenCV}{Open Source Computer Vision Library}
 \newacronym{osg}{OSG}{OpenSceneGraph}
+\newacronym{assimp}{ASSIMP}{Asset Import Library}
+\newacronym{glfw}{GLFW}{Graphics Library Framework}
+\newacronym{glew}{GLEW}{OpenGL Extension Wrangler}
+\newacronym{glm}{GLM}{OpenGL Mathematics}
 \newacronym{sdk}{SDK}{Software Development Kit}
 \newacronym{fbp}{FBP}{Retroproyección Filtrada}
 \newacronym{cgls}{CGLS}{Mínimos Cuadrados Conjugados}
